@@ -12,6 +12,7 @@ test {
     jvmArgs '--add-exports', 'jlsm.core/jlsm.sstable.internal=ALL-UNNAMED'
     jvmArgs '--add-exports', 'jlsm.core/jlsm.compaction.internal=ALL-UNNAMED'
     jvmArgs '--add-exports', 'jlsm.core/jlsm.tree.internal=ALL-UNNAMED'
+    jvmArgs '--add-exports', 'jlsm.core/jlsm.encryption.internal=ALL-UNNAMED'
     jvmArgs '--add-modules', 'jdk.incubator.vector'
     jvmArgs '--add-exports', 'jlsm.core/jlsm.core.json.internal=ALL-UNNAMED'
     jvmArgs '--add-opens', 'jlsm.core/jlsm.core.json=ALL-UNNAMED'
